@@ -30,14 +30,14 @@ DIST texlive-basicbin-2007.tar.bz2 9135882 RMD160 1ba9588e33fa19ab87371943e1ca5f
 DIST texlive-binextra-2007.tar.bz2 548653 RMD160 719967c6249a1d12aa3e17d581547a5d9839f642 SHA1 dc7d31391ccd31c33c30a2d85ddb80acede18a16 SHA256 d90ad4ee76180cfc5547f84a926e218ce6eab29add4f7b5310b9fd8827bd6c44
 DIST texlive-core-2007.tar.bz2 31078286 RMD160 496cb3fa3c5cd9b2ea5da3b0bced67a2b5afe7b9 SHA1 37286f7b962c18ec5234071a8d2dde1499d9ab71 SHA256 96c12147ea9717539553eb6b3be52c2df6163ca617dccc71282ccd39c2e5773b
 DIST texlive-fontbin-2007.tar.bz2 2300119 RMD160 6bab22424b58c9751c4fdad0bdecb985b18379cb SHA1 c905e192491a24b7864ffa17dc0f9c74429555c7 SHA256 8d42376c9e11d12a0280c464672d633c1ca0be6bd01ac98e28c71aaab18d0da1
-EBUILD texlive-core-2007.ebuild 5638 RMD160 1c4a59d81c61df8fa494e40d133b5933015da388 SHA1 4227b76174f21ceb5d1ea10322f81184698008cb SHA256 d42084fe1ff8437fd141e6d2cd1e40ef6f09e4f3e651b6d74a6f8614ac081f3e
-MD5 d017515140517224f5087ad8c20e6de5 texlive-core-2007.ebuild 5638
-RMD160 1c4a59d81c61df8fa494e40d133b5933015da388 texlive-core-2007.ebuild 5638
-SHA256 d42084fe1ff8437fd141e6d2cd1e40ef6f09e4f3e651b6d74a6f8614ac081f3e texlive-core-2007.ebuild 5638
-MISC ChangeLog 3681 RMD160 a6609748b629e849486a370e06e2460743b208f1 SHA1 9e45acfb56ff93db3a899957a3cf99cfd539f6f1 SHA256 09386584f128caae8a955506214c7ba043c08b5c469efa166caee319c5f6d595
-MD5 d7a07185d388cf94318d7b6b08280788 ChangeLog 3681
-RMD160 a6609748b629e849486a370e06e2460743b208f1 ChangeLog 3681
-SHA256 09386584f128caae8a955506214c7ba043c08b5c469efa166caee319c5f6d595 ChangeLog 3681
+EBUILD texlive-core-2007.ebuild 5821 RMD160 49c2703744f9636e04113aa76b2088e99c020360 SHA1 40dca71e793b292a11304f5aea0c3b0f29cb76e8 SHA256 19cc9f6f75df9ed974b9b6c12cb6ae8f2b71ebc53a69e881a89773c0d7ca808e
+MD5 2a1e06847182942bdf52caa80302543c texlive-core-2007.ebuild 5821
+RMD160 49c2703744f9636e04113aa76b2088e99c020360 texlive-core-2007.ebuild 5821
+SHA256 19cc9f6f75df9ed974b9b6c12cb6ae8f2b71ebc53a69e881a89773c0d7ca808e texlive-core-2007.ebuild 5821
+MISC ChangeLog 3782 RMD160 078ab0e59a66c2a20f57fab97b0fde121a341bed SHA1 579930e1aea2ebb552dfc14ce20862b512435047 SHA256 849f0568e3506ed82c02d45a8540eaddf6fc277a211a1e9c50e5f84e604ec119
+MD5 43eb080d82fe420af264325998107e99 ChangeLog 3782
+RMD160 078ab0e59a66c2a20f57fab97b0fde121a341bed ChangeLog 3782
+SHA256 849f0568e3506ed82c02d45a8540eaddf6fc277a211a1e9c50e5f84e604ec119 ChangeLog 3782
 MD5 f1925aa6bf2fbc1d70e86be14a589283 files/digest-texlive-core-2007 1069
 RMD160 b9c4b0fac91248104c1c9f04e7e0a4b83a199551 files/digest-texlive-core-2007 1069
 SHA256 2f5ac7d299c66c05082e6a56afd9dfa2a4a76c98bf8cda6ce0d493e2611c540e files/digest-texlive-core-2007 1069
